overflow fix

--- a/src/styles/activity-timeline.css
+++ b/src/styles/activity-timeline.css
@@ -13,7 +13,6 @@
 .stepicon-text {
   position: absolute;
   top: -18px;
-  font-size: 2vw;
 }
 
 .MuiTypography-root.activity-text {
